--- a/index.html
+++ b/index.html
@@ -16,49 +16,46 @@
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-           <a class="navbar-brand" href=".">Navbar</a>
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-             <span class="navbar-toggler-icon"></span>
-           </button>
 
-           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-             <ul class="navbar-nav mr-auto">
-               <li class="nav-item active">
-                 <a class="nav-link" href=".">Home <span class="sr-only">(current)</span></a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#">Link</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link disabled" href="#">Disabled</a>
-               </li>
-               <li class="nav-item dropdown">
-                 <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                   <a class="dropdown-item" href="#">Action</a>
-                   <a class="dropdown-item" href="#">Another action</a>
-                   <a class="dropdown-item" href="#">Something else here</a>
-                 </div>
-               </li>
-             </ul>
-             <form class="form-inline my-2 my-lg-0">
-               <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-               <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-             </form>
-           </div>
-        </nav>
+    <div class="container pt-5 pb-5">
+      <img class="logo" src="assets/img/FFC_Black.svg" alt="Logo">
+    </div>
 
-         <div class="container">
+    <div class="section-main mt-5">
+      <div class="container">
+        <div class="soon-text text-uppercase">
+          Скоро
+        </div>
 
-           <div style="padding-top:120px; text-align:center;">
-                <h1>Hello world!</h1>
-                <p class="lead">Remove this content or build upon it.<br>
-                For documentation and examples: <a href="http://getbootstrap.com/" target="_blank">getbootstrap.com</a><br>
-                Here is a <a href="newpage.html">link to another page</a></p>
-           </div>
+        <div class="first-text text-uppercase">
+          Первая сеть в казахстане
+        </div>
 
-         </div>
+        <div class="box">
+          <p class="top-text text-uppercase">В сфере моды и розничной торговли для рабочих мест и стажировок</p>
+
+          <div class="box-features d-flex justify-content-sm-center flex-wrap" style="font-size: 1.4rem;">
+            <div class="w-sm-50 pr-md-3">
+              <p><img src="assets/img/moustaches@1x.svg" alt="Мужчины"> Мужчины</p>
+              <p><img src="assets/img/high-heel@1x.svg" alt="Женщины">  Женщины</p>
+              <p><img src="assets/img/teddy-bear@1x.svg" alt="Дети"> Дети</p>
+              <p><img src="assets/img/soccer@1x.svg" alt="Спорт"> Спорт</p>
+              <p><img src="assets/img/earrings@1x.svg" alt="Ювелирные изделия"> Ювелирные изделия</p>
+              <p><img src="assets/img/baseball-cap@1x.svg" alt="Mens"> Аксессуары</p>
+              <p><img src="assets/img/diamond@1x.svg" alt="Mens"> Элитные</p>
+            </div>
+            <div class="w-md-50">
+              <p><img src="assets/img/3d-model.svg" alt="Агентства  моделирования"> Агентства  моделирования</p>
+              <p><img src="assets/img/layers@1x.svg" alt="Агентства креатива и дизайна"> Агентства креатива и дизайна</p>
+              <p><img src="assets/img/shopping-cart@1x.svg" alt="Интернет-магазины"> Интернет-магазины</p>
+              <p><img src="assets/img/newspaper@1x.svg" alt="Интернет-журналы"> Интернет-журналы</p>
+              <p><img src="assets/img/dress@1x.svg" alt="Журналы моды"> Журналы моды</p>
+              <p><img src="assets/img/social-media@1x.svg" alt="PR-агенства"> PR-агенства</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- build:js -->
     <script src="assets/js/main.js"></script>
